@@ -69,18 +69,3 @@ tasks.register("runMultimediaReporter", JavaExec) {
     // args("-Dspring.profiles.active=file")
     // environment("spring.profiles.active", "file")
 }
-
-// Start: gradle bootRun --args="--spring.profiles.active=file"
-// The archive name. If the name has not been explicitly set, the pattern for the name is:
-// [archiveBaseName]-[archiveAppendix]-[archiveVersion]-[archiveClassifier].[archiveExtension]
-// archiveFileName = "my-boot.jar"
-// springBoot {
-//     mainClass = project.main
-// }
-
-// gradle bootRun --args="--spring.profiles.active=file --server.port=65111"
-// bootRun {
-//     args = [
-//             "--enable-native-access=ALL-UNNAMED"
-//     ]
-// }
